Migrated/deployment/k8s-manifests/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: credittransfer
  labels:
    istio-injection: enabled
    app: credittransfer
