Migrated/deployment/k8s-manifests/external-services.yaml
apiVersion: v1
kind: Service
metadata:
  name: nobill-service
  namespace: credittransfer
spec:
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
---
apiVersion: v1
kind: Endpoints
metadata:
  name: nobill-service
  namespace: credittransfer
subsets:
  - addresses:
      - ip: 10.1.132.98
    ports:
      - port: 80
