Migrated/deployment/k8s-manifests/nobill-external-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nobill-external
  namespace: credittransfer
spec:
  type: ExternalName
  externalName: host.docker.internal
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
---
# Alternative ClusterIP configuration for direct IP access
apiVersion: v1  
kind: Service
metadata:
  name: nobill-external-direct
  namespace: credittransfer
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
---
apiVersion: v1
kind: Endpoints
metadata:
  name: nobill-external-direct
  namespace: credittransfer
subsets:
- addresses:
  - ip: 10.1.132.98
  ports:
  - port: 80
    protocol: TCP
